--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Acacia Tree Farms</title>
+    <title>Acacia Tree Farms | Sustainable Ethiopian Coffee</title>
+    <meta
+      name="description"
+      content="Sustainable coffee farming with blockchain traceability and community impact in Ethiopia's Harar region."
+    />
+        <script src="https://cdn.tailwindcss.com"></script>
+
   </head>
   <body>
     <div id="root"></div>
